# file-crypt

./: Cargo.toml  README.md  go.mod  main.go
.github/workflows/: build.yml
crypto/: compat.go  engine.go  standard.go
go-crypt/: main.go
rust-crypt/: Cargo.toml
rust-crypt/src/: main.rs
