[package]
name = "rust-crypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"  # Add this
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
anyhow = "1.0"
getrandom = { version = "0.2", features = ["std"] } # Add "std" feature